# graphicEngine

./: CMakeLists.txt  Camera.h  Engine.cpp  Engine.h  Light.cpp  Light.h  Object.cpp  Object.h  README.md  Shader.cpp  Shader.h  main.cpp
shaders/: framebuffer.frag  framebuffer.vert  object.frag  object.vert  stencil.frag  stencil.vert  textureObject.frag  textureObject.vert
